# Blockfuse-test

./: .gitignore  README.md
question1/src/: main.rs  utils.rs
question2/: .env  .gitignore  Cargo.toml
question2/migration/src/: m20220101_000001_create_table.rs
question2/src/: main.rs
question2/src/routes/: mod.rs
question2/src/routes/handler/: event_handlers.rs  mod.rs
question2/src/utils/: constants.rs
